# far-right-tracker-europe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-data.yml
data/: all_parties.json  summary.json
data-pipeline/: requirements.txt
data-pipeline/pipeline/: polling.py  polling_sources.json  postprocessing.py  sources.yaml  update.py  utils.py
data/countries/: AL.json  AM.json  AT.json  BA.json  BE.json  BG.json  CH.json  CY.json  CZ.json  DE.json  DK.json  EE.json  ES.json  FI.json  FR.json  GB.json  GE.json  GR.json  HR.json  HU.json  IE.json  IS.json  IT.json  LT.json  LU.json  LV.json  MD.json  ME.json  MK.json  MT.json  NL.json  NO.json  PL.json  PT.json  RO.json  RS.json  RU.json  SE.json  SI.json  SK.json  (+3 more)
docs/: 404.html  index.html  index.txt  trace
docs/country/: AL.html  AL.txt  AM.html  AM.txt  AT.html  AT.txt  BE.html  BE.txt  BG.html  BG.txt  CH.html  CH.txt  CY.html  CY.txt  CZ.html  CZ.txt  DE.html  DE.txt  DK.html  DK.txt  EE.html  EE.txt  ES.html  ES.txt  FI.html  FI.txt  FR.html  FR.txt  GB.html  GB.txt  GE.html  GE.txt  GR.html  GR.txt  HR.html  HR.txt  HU.html  HU.txt  IE.html  IE.txt  (+44 more)
docs/server/: _error.js  _rsc_components_Map_tsx.js  server-reference-manifest.json  webpack-runtime.js
frontend/: next.config.js  package-lock.json  package.json  topojson-client.d.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.module.css  page.tsx
frontend/components/: LeafletMap.tsx  Map.tsx  MapWithTimeline.tsx  TimeSeriesChart.tsx  TimelineSlider.module.css  TimelineSlider.tsx
frontend/lib/: iso.ts  (+1 more)
(+178 files in other folders)
