[project]
name = "far-right-tracker-europe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "pycountry>=23.0.0",
    "dateparser>=1.2.0",
]
